--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
     <!-- link to stylesheet (always require after Bootstrap) -->
+    <link rel=stylesheet type="text/css" href="style.css">
 
     <!-- link to javascript file -->
+    <script src="ticTacToe.js"></script>
 
     <title>Tic Tac Toe</title>
   </head>
